# graffito-bot

./: .gitattributes  .gitignore  README.md  pyproject.toml
deploy/: graffito-daemon.service  graffito-dashboard.service  install.sh  update.sh
graffito/: __init__.py  cli.py  config.py  daemon.py  dashboard.py  db.py  git_ops.py  logging_setup.py  refresh.py  report.py  schedule.py  snapshot.py  tick.py
prompts/: recovery_prompt.md  system_context.md  tick_prompt.md
state/: goals.md
state/memory/: MEMORY.md
